#175 #126 - spacing & newline cleanup