@@ -8,18 +8,24 @@
 
 # *********** Setting ES_JAVA_OPTS ***************
 if [[ -z "$ES_JAVA_OPTS" ]]; then
-    AVAILABLE_MEMORY=$(awk '/MemAvailable/{printf "%.f", $2/1024/1024}' /proc/meminfo)
-    if [ $AVAILABLE_MEMORY -ge 8 -a $AVAILABLE_MEMORY -le 12 ]; then
-      ES_MEMORY=2
-    elif [$AVAILABLE_MEMORY -ge 13 -a $AVAILABLE_MEMORY -le 16]; then
-      ES_MEMORY=4
+		# Check using more accurate MB
+    AVAILABLE_MEMORY=$(awk '/MemAvailable/{printf "%.f", $2/1024}' /proc/meminfo)
+    if [ $AVAILABLE_MEMORY -ge 1000 -a $AVAILABLE_MEMORY -le 7999 ]; then
+      ES_MEMORY="1200m"
+    elif [ $AVAILABLE_MEMORY -ge 8000 -a $AVAILABLE_MEMORY -le 12999 ]; then
+      ES_MEMORY="2g"
+    elif [ $AVAILABLE_MEMORY -ge 13000 -a $AVAILABLE_MEMORY -le 16000 ]; then
+      ES_MEMORY="4g"
     else
-      ES_MEMORY=$(awk '/MemAvailable/{printf "%.f", $2/1024/1024/2}' /proc/meminfo)
+      # Using GB instead of MB -- because plenty of RAM now
+      ES_MEMORY=$(( AVAILABLE_MEMORY / 1024 ))
       if [ $ES_MEMORY -gt 31 ]; then
-        ES_MEMORY=31
+        ES_MEMORY="31g"
+      else
+        ES_MEMORY="${ES_MEMORY}g"
       fi
     fi
-    export ES_JAVA_OPTS="-Xms${ES_MEMORY}g -Xmx${ES_MEMORY}g"
+    export ES_JAVA_OPTS="-Xms${ES_MEMORY} -Xmx${ES_MEMORY} -XX:-UseConcMarkSweepGC -XX:-UseCMSInitiatingOccupancyOnly -XX:+UseG1GC"
 fi
 echo "[HELK-ES-DOCKER-INSTALLATION-INFO] Setting ES_JAVA_OPTS to $ES_JAVA_OPTS"
 
